k8s/deployment-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  namespace: flask-app
  labels:
    app: flaskapp
spec:
  selector:
    matchLabels:
      app: flaskapp
  replicas: 1
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flask
          image: ramirezy/flask-challenge:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
