k8s/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: flask-app
spec:
  ports:
  - port: 27017
  selector:
    app: mongodb
  clusterIP: None
